Imported most of art city files.  Recreated core data schema.

--- a/PublicArt/Base.lproj/Main.storyboard
+++ b/PublicArt/Base.lproj/Main.storyboard
@@ -42,7 +42,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="mhl-Bp-Srf" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="706" y="1220"/>
+            <point key="canvasLocation" x="759" y="3370"/>
         </scene>
         <!--Content View Controller-->
         <scene sceneID="Y1P-Mr-hpi">
@@ -126,7 +126,7 @@
                     <collectionView key="view" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" id="phQ-wR-s2h">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <color key="backgroundColor" red="0.0" green="0.25098040699958801" blue="0.50196081399917603" alpha="1" colorSpace="calibratedRGB"/>
                         <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="wg1-J5-uBc">
                             <size key="itemSize" width="50" height="50"/>
                             <size key="headerReferenceSize" width="0.0" height="0.0"/>
@@ -169,7 +169,7 @@
                 </splitViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="fu1-1h-slQ" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="728" y="-7"/>
+            <point key="canvasLocation" x="759" y="11"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="AOI-HN-6gT">
@@ -206,7 +206,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="CjB-53-rk5" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="740" y="1220"/>
+            <point key="canvasLocation" x="759" y="1226"/>
         </scene>
         <!--Map-->
         <scene sceneID="AVe-nP-pbv">
@@ -225,7 +225,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="rPS-Ee-MUG" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="872" y="842"/>
+            <point key="canvasLocation" x="759" y="1942"/>
         </scene>
         <!--Report-->
         <scene sceneID="hlS-Os-JYJ">
@@ -244,7 +244,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="quI-X8-WS3" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="973" y="1744"/>
+            <point key="canvasLocation" x="759" y="2642"/>
         </scene>
     </scenes>
     <resources>
@@ -252,6 +252,6 @@
         <image name="toolbar-location_arrow_filled" width="22" height="22"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="4WO-9G-Pv0"/>
+        <segue reference="oCH-tK-aLa"/>
     </inferredMetricsTieBreakers>
 </document>
