--- a/PublicArt/Base.lproj/Main.storyboard
+++ b/PublicArt/Base.lproj/Main.storyboard
@@ -287,10 +287,10 @@
                                 <rect key="frame" x="0.0" y="0.0" width="600" height="487"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="laB-Sb-Wvs" userLabel="ContentView">
-                                        <rect key="frame" x="0.0" y="0.0" width="600" height="566"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="600" height="691"/>
                                         <subviews>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="jWh-d9-GTp" userLabel="InfoView">
-                                                <rect key="frame" x="0.0" y="0.0" width="600" height="566"/>
+                                                <rect key="frame" x="0.0" y="0.0" width="600" height="691"/>
                                                 <subviews>
                                                     <imageView contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="poq-xo-sc2" userLabel="artImageView">
                                                         <rect key="frame" x="16" y="0.0" width="568" height="568"/>
@@ -300,7 +300,7 @@
                                                         </constraints>
                                                     </imageView>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="ArtistNameLabel" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="25W-RW-lvb">
-                                                        <rect key="frame" x="16" y="601" width="568" height="21"/>
+                                                        <rect key="frame" x="16" y="599" width="568" height="21"/>
                                                         <constraints>
                                                             <constraint firstAttribute="height" priority="501" constant="21" id="Cag-tM-18d"/>
                                                         </constraints>
@@ -309,7 +309,7 @@
                                                         <nil key="highlightedColor"/>
                                                     </label>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="MediumLabel" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="VDp-Vs-vO4">
-                                                        <rect key="frame" x="16" y="626" width="568" height="21"/>
+                                                        <rect key="frame" x="16" y="624" width="568" height="21"/>
                                                         <constraints>
                                                             <constraint firstAttribute="height" priority="503" constant="21" id="JZK-ld-Gul"/>
                                                         </constraints>
@@ -318,7 +318,7 @@
                                                         <nil key="highlightedColor"/>
                                                     </label>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="DimensionsLabel" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sdV-Pl-et5">
-                                                        <rect key="frame" x="16" y="651" width="568" height="21"/>
+                                                        <rect key="frame" x="16" y="649" width="568" height="21"/>
                                                         <constraints>
                                                             <constraint firstAttribute="height" priority="504" constant="21" id="Duf-QK-wyT"/>
                                                         </constraints>
@@ -327,7 +327,7 @@
                                                         <nil key="highlightedColor"/>
                                                     </label>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="LocationLabel" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Uhb-wT-pDi">
-                                                        <rect key="frame" x="16" y="672" width="568" height="21"/>
+                                                        <rect key="frame" x="16" y="670" width="568" height="21"/>
                                                         <constraints>
                                                             <constraint firstAttribute="height" priority="502" constant="21" id="pZT-Dr-PFf"/>
                                                         </constraints>
@@ -343,7 +343,7 @@
                                                         <nil key="highlightedColor"/>
                                                     </label>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="ArtTitleLabel" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wel-DF-dUB">
-                                                        <rect key="frame" x="16" y="576" width="568" height="21"/>
+                                                        <rect key="frame" x="16" y="576" width="568" height="19"/>
                                                         <constraints>
                                                             <constraint firstAttribute="height" priority="500" constant="21" id="T9p-Py-Zgr"/>
                                                         </constraints>
@@ -355,6 +355,7 @@
                                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                                 <constraints>
                                                     <constraint firstItem="wel-DF-dUB" firstAttribute="leading" secondItem="25W-RW-lvb" secondAttribute="leading" id="1bj-EF-Fxk"/>
+                                                    <constraint firstAttribute="bottom" secondItem="Uhb-wT-pDi" secondAttribute="bottom" id="9kk-KD-qXU"/>
                                                     <constraint firstItem="VDp-Vs-vO4" firstAttribute="top" secondItem="25W-RW-lvb" secondAttribute="bottom" constant="4" id="DjD-yK-ebd"/>
                                                     <constraint firstItem="VDp-Vs-vO4" firstAttribute="leading" secondItem="wel-DF-dUB" secondAttribute="leading" id="FrJ-gH-CjB"/>
                                                     <constraint firstItem="sdV-Pl-et5" firstAttribute="bottom" secondItem="Uhb-wT-pDi" secondAttribute="top" id="GaC-Vg-Q3W"/>
