--- a/PublicArt/Base.lproj/Main.storyboard
+++ b/PublicArt/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7706" systemVersion="14D131" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="49e-Tb-3d3">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7706" systemVersion="14D131" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7703"/>
         <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
@@ -8,7 +8,7 @@
         <!--Tab Bar Controller-->
         <scene sceneID="yl2-sM-qoP">
             <objects>
-                <tabBarController id="49e-Tb-3d3" sceneMemberID="viewController">
+                <tabBarController storyboardIdentifier="MainTabBarControllerID" id="49e-Tb-3d3" sceneMemberID="viewController">
                     <nil key="simulatedBottomBarMetrics"/>
                     <tabBar key="tabBar" contentMode="scaleToFill" id="W28-zg-YXA">
                         <rect key="frame" x="0.0" y="975" width="768" height="49"/>
@@ -250,7 +250,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="CjB-53-rk5" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="777" y="1266"/>
+            <point key="canvasLocation" x="759" y="1648"/>
         </scene>
         <!--Explore-->
         <scene sceneID="AVe-nP-pbv">
@@ -300,7 +300,7 @@
                                                         </constraints>
                                                     </imageView>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="ArtistNameLabel" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="25W-RW-lvb">
-                                                        <rect key="frame" x="16" y="599" width="568" height="21"/>
+                                                        <rect key="frame" x="32" y="599" width="552" height="21"/>
                                                         <constraints>
                                                             <constraint firstAttribute="height" priority="501" constant="21" id="Cag-tM-18d"/>
                                                         </constraints>
@@ -309,7 +309,7 @@
                                                         <nil key="highlightedColor"/>
                                                     </label>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="MediumLabel" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="VDp-Vs-vO4">
-                                                        <rect key="frame" x="16" y="624" width="568" height="21"/>
+                                                        <rect key="frame" x="32" y="624" width="552" height="21"/>
                                                         <constraints>
                                                             <constraint firstAttribute="height" priority="503" constant="21" id="JZK-ld-Gul"/>
                                                         </constraints>
@@ -318,7 +318,7 @@
                                                         <nil key="highlightedColor"/>
                                                     </label>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="DimensionsLabel" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sdV-Pl-et5">
-                                                        <rect key="frame" x="16" y="649" width="568" height="21"/>
+                                                        <rect key="frame" x="32" y="649" width="552" height="21"/>
                                                         <constraints>
                                                             <constraint firstAttribute="height" priority="504" constant="21" id="Duf-QK-wyT"/>
                                                         </constraints>
@@ -327,7 +327,7 @@
                                                         <nil key="highlightedColor"/>
                                                     </label>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="LocationLabel" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Uhb-wT-pDi">
-                                                        <rect key="frame" x="16" y="670" width="568" height="21"/>
+                                                        <rect key="frame" x="32" y="670" width="552" height="21"/>
                                                         <constraints>
                                                             <constraint firstAttribute="height" priority="502" constant="21" id="pZT-Dr-PFf"/>
                                                         </constraints>
@@ -343,7 +343,7 @@
                                                         <nil key="highlightedColor"/>
                                                     </label>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="ArtTitleLabel" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wel-DF-dUB">
-                                                        <rect key="frame" x="16" y="576" width="568" height="19"/>
+                                                        <rect key="frame" x="32" y="576" width="552" height="19"/>
                                                         <constraints>
                                                             <constraint firstAttribute="height" priority="500" constant="21" id="T9p-Py-Zgr"/>
                                                         </constraints>
@@ -375,7 +375,7 @@
                                                     <constraint firstItem="wel-DF-dUB" firstAttribute="leading" secondItem="sdV-Pl-et5" secondAttribute="leading" id="ogn-Ag-E4D"/>
                                                     <constraint firstItem="Uhb-wT-pDi" firstAttribute="width" secondItem="wel-DF-dUB" secondAttribute="width" id="tR6-Gw-4Nh"/>
                                                     <constraint firstAttribute="height" priority="500" constant="566" id="wUk-pA-v6y"/>
-                                                    <constraint firstItem="wel-DF-dUB" firstAttribute="leading" secondItem="jWh-d9-GTp" secondAttribute="leading" constant="16" id="y5n-xp-wl3"/>
+                                                    <constraint firstItem="wel-DF-dUB" firstAttribute="leading" secondItem="jWh-d9-GTp" secondAttribute="leading" constant="32" id="y5n-xp-wl3"/>
                                                     <constraint firstItem="3Cm-oA-eUa" firstAttribute="centerY" secondItem="poq-xo-sc2" secondAttribute="centerY" id="yUZ-GC-Wip"/>
                                                 </constraints>
                                             </view>
