--- a/PublicArt/Base.lproj/Main.storyboard
+++ b/PublicArt/Base.lproj/Main.storyboard
@@ -16,8 +16,9 @@
                     </tabBar>
                     <connections>
                         <segue destination="WVx-oo-7dW" kind="relationship" relationship="viewControllers" id="a9x-ue-DhU"/>
+                        <segue destination="nBu-ce-fRo" kind="relationship" relationship="viewControllers" id="FAu-ae-QXJ"/>
+                        <segue destination="Mda-a7-bbJ" kind="relationship" relationship="viewControllers" id="V8R-AK-5fk"/>
                         <segue destination="Vjy-jA-tFQ" kind="relationship" relationship="viewControllers" id="ikp-Cm-5GA"/>
-                        <segue destination="lo3-Jm-IW2" kind="relationship" relationship="viewControllers" id="FAu-ae-QXJ"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="HuB-VB-40B" sceneMemberID="firstResponder"/>
@@ -31,6 +32,9 @@
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="J9D-hH-VjQ">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
+                        <textAttributes key="titleTextAttributes">
+                            <color key="textColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                        </textAttributes>
                     </navigationBar>
                     <connections>
                         <segue destination="g7n-ws-DDI" kind="relationship" relationship="rootViewController" id="SWK-7x-6PW"/>
@@ -205,7 +209,7 @@
         <scene sceneID="dq0-1X-0iD">
             <objects>
                 <splitViewController storyboardIdentifier="DiscoverSplitViewControllerID" useStoryboardIdentifierAsRestorationIdentifier="YES" id="WVx-oo-7dW" customClass="MainMenuSplitViewController" customModule="PublicArt" customModuleProvider="target" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Browse" id="SQI-A7-PA2"/>
+                    <tabBarItem key="tabBarItem" title="Browse" image="tab-art" id="SQI-A7-PA2"/>
                     <connections>
                         <segue destination="rMD-Y1-dPa" kind="relationship" relationship="masterViewController" id="Z5V-aP-0PQ"/>
                         <segue destination="b9c-af-Gjq" kind="relationship" relationship="detailViewController" id="4WO-9G-Pv0"/>
@@ -223,6 +227,9 @@
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="gG2-4p-E6F">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
+                        <textAttributes key="titleTextAttributes">
+                            <color key="textColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                        </textAttributes>
                     </navigationBar>
                     <nil name="viewControllers"/>
                     <connections>
@@ -233,7 +240,7 @@
             </objects>
             <point key="canvasLocation" x="1548" y="412"/>
         </scene>
-        <!--Search-->
+        <!--View Controller-->
         <scene sceneID="IdK-pu-Syd">
             <objects>
                 <viewController id="Vjy-jA-tFQ" sceneMemberID="viewController">
@@ -244,18 +251,67 @@
                     <view key="view" contentMode="scaleToFill" id="Iih-D0-yrH">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Search" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="KLS-ru-IVy">
+                                <rect key="frame" x="200" y="289" width="200" height="21"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="200" id="yGX-RK-5hD"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="KLS-ru-IVy" firstAttribute="centerX" secondItem="Iih-D0-yrH" secondAttribute="centerX" id="JXj-6H-SmX"/>
+                            <constraint firstItem="iZv-yc-EBJ" firstAttribute="top" secondItem="KLS-ru-IVy" secondAttribute="bottom" constant="241" id="UzR-Jy-DtV"/>
+                        </constraints>
                     </view>
-                    <tabBarItem key="tabBarItem" title="Search" id="Ffr-0j-lLL"/>
+                    <tabBarItem key="tabBarItem" systemItem="search" id="Ffr-0j-lLL"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="CjB-53-rk5" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="759" y="1648"/>
+            <point key="canvasLocation" x="767" y="2308"/>
         </scene>
-        <!--Explore-->
+        <!--Share-->
+        <scene sceneID="H35-ER-kYp">
+            <objects>
+                <viewController id="Mda-a7-bbJ" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="pkG-U3-5Qr"/>
+                        <viewControllerLayoutGuide type="bottom" id="fA8-zz-1y2"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="vb4-2h-rN0">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Share" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ISh-Kn-bSJ">
+                                <rect key="frame" x="168" y="289" width="265" height="21"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="265" id="Ly8-5z-Rk5"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="fA8-zz-1y2" firstAttribute="top" secondItem="ISh-Kn-bSJ" secondAttribute="bottom" constant="241" id="TMw-Tl-q2R"/>
+                            <constraint firstItem="ISh-Kn-bSJ" firstAttribute="centerX" secondItem="vb4-2h-rN0" secondAttribute="centerX" id="pnP-II-PYk"/>
+                        </constraints>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="Share" image="tab-photos" id="HeF-bZ-orP"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="IyS-jG-5DV" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="759" y="1520"/>
+        </scene>
+        <!--City Maps View Controller-->
         <scene sceneID="AVe-nP-pbv">
             <objects>
-                <viewController id="lo3-Jm-IW2" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="CityMapsViewControllerID" id="lo3-Jm-IW2" customClass="CityMapsViewController" customModule="PublicArt" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="dBv-tS-TNt"/>
                         <viewControllerLayoutGuide type="bottom" id="2x2-6b-HcW"/>
@@ -263,13 +319,37 @@
                     <view key="view" contentMode="scaleToFill" id="sEb-pJ-iWL">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" misplaced="YES" mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="tD7-2K-zCc">
+                                <rect key="frame" x="0.0" y="0.0" width="600" height="565"/>
+                            </mapView>
+                            <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="rrd-7g-TBC">
+                                <rect key="frame" x="0.0" y="507" width="600" height="44"/>
+                                <items>
+                                    <barButtonItem title="Item" id="BOj-xw-Fv8"/>
+                                </items>
+                            </toolbar>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="2x2-6b-HcW" firstAttribute="top" secondItem="tD7-2K-zCc" secondAttribute="bottom" id="297-Cu-SDV"/>
+                            <constraint firstItem="tD7-2K-zCc" firstAttribute="top" secondItem="dBv-tS-TNt" secondAttribute="bottom" constant="-20" id="4fr-ja-lOP"/>
+                            <constraint firstItem="2x2-6b-HcW" firstAttribute="top" secondItem="rrd-7g-TBC" secondAttribute="bottom" id="8aL-gp-bff"/>
+                            <constraint firstAttribute="trailing" secondItem="rrd-7g-TBC" secondAttribute="trailing" id="Bbz-Q2-o2a"/>
+                            <constraint firstItem="tD7-2K-zCc" firstAttribute="leading" secondItem="sEb-pJ-iWL" secondAttribute="leading" id="JxA-IC-wOc"/>
+                            <constraint firstItem="rrd-7g-TBC" firstAttribute="leading" secondItem="sEb-pJ-iWL" secondAttribute="leading" id="Uc4-rD-g8Y"/>
+                            <constraint firstAttribute="trailing" secondItem="tD7-2K-zCc" secondAttribute="trailing" id="zue-2T-ROK"/>
+                        </constraints>
                     </view>
-                    <tabBarItem key="tabBarItem" title="Explore" image="toolbar-location_arrow_filled" id="J3O-Vs-Evl"/>
+                    <navigationItem key="navigationItem" id="wtT-cv-V9i"/>
+                    <connections>
+                        <outlet property="mapView" destination="tD7-2K-zCc" id="VBJ-6z-lRk"/>
+                        <outlet property="toolbar" destination="rrd-7g-TBC" id="t4i-6b-03X"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="rPS-Ee-MUG" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1553" y="1260"/>
+            <point key="canvasLocation" x="2281" y="1132"/>
         </scene>
         <!--Single Art View Controller-->
         <scene sceneID="NkW-6s-gqb">
@@ -280,7 +360,7 @@
                         <viewControllerLayoutGuide type="bottom" id="Zno-Wm-nBC"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="baY-jB-vrx">
-                        <rect key="frame" x="0.0" y="64" width="600" height="536"/>
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="536"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
                             <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" translatesAutoresizingMaskIntoConstraints="NO" id="czG-qf-Vbd">
@@ -423,8 +503,32 @@
             </objects>
             <point key="canvasLocation" x="3023" y="407"/>
         </scene>
+        <!--Explore-->
+        <scene sceneID="0mG-7l-uTL">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="nBu-ce-fRo" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Explore" image="tab-map" id="J3O-Vs-Evl"/>
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="hhr-y3-ii9">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <textAttributes key="titleTextAttributes">
+                            <color key="textColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                        </textAttributes>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="lo3-Jm-IW2" kind="relationship" relationship="rootViewController" id="zYZ-Uo-KSt"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="ohO-AK-Axw" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1548" y="1132"/>
+        </scene>
     </scenes>
     <resources>
-        <image name="toolbar-location_arrow_filled" width="22" height="22"/>
+        <image name="tab-art" width="32" height="32"/>
+        <image name="tab-map" width="32" height="32"/>
+        <image name="tab-photos" width="32" height="32"/>
     </resources>
 </document>
